# src/modules/notifications/routes/__init__.py
@@ -1,0 +1,1 @@
+"""HTTP routes for the notifications module."""
